During this week, much progress has been taught to me by my tutor. I've learnt that if i want multiple pages for my website, i should make multiple html dedicted for each pages. This brings us to the function of the navbar wher we linked the pages to each other. To start this project, we first make the body black and the band's logo on the top to match the theme colours of the band blackpink, black and pink. In w3school and in some other research in google, i learnt the term 'carousel', which is a design that lets images to be displayed like a presentation slides. If you click the arrow button, you can move on to the next or previous image to see the rest of the photos. Below the carousel, a small quality of life is added, there are 'Dots' where if you click on the first dot it could lead you to the first image of the band and so on. These functions are added in javascript where slideIndex was assigned as the number(n) to subtract or add to get to the right picture. In addition, a hover design was placed for the buttons in navbar and the arrows for the carousel. Under the merch.html, a hero image of a blackpink merch  store was placed to first attract the veiwer's attention toward the variety of the merch. The merch are under the container class as 'flex display' was attempted. Images are placed in the Image folder, and normalised.css is added. More accurate to life merch details will be placed later.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,60 @@
 <html>
-    <head></head>
-    <body>
-        <h1>My assignment</h1>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Assignment1</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+</head>
+
+<body>
+    <div id="header">
+        <img src="images/logo.png" alt="BlackPink Logo" id="logo">
+    </div>
+
+    <nav id="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Aboutus.html">About Us</a></li>
+            <li><a href="Merch.html">Merch</a></li>
+            <li><a href="Tickets.html">Tickets</a></li>
+        </ul>
+    </nav>
+
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="images/blackpink1.jpg" style="width:100%">
+                <div class="text">Caption Text</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="images/blackpink2.jpg" style="width:100%">
+                <div class="text">Caption Two</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="images/blackpink3.jpg" style="width:100%">
+                <div class="text">Caption Three</div>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
+        </div>
+        <br>
+
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+        
+        <script src="js/script.js"></script>
     </body>
 </html>
