fixed the hero image and experiment a button for hero text

--- a/Merch.html
+++ b/Merch.html
@@ -23,8 +23,11 @@
         </ul>
     </nav>
 
-    <div class="slideshow-container">
-        <img src="images/heroMerch.jpg">
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1>Blackpink Merch</h1>
+            <p>Shop the latest collection!</p>
+        </div>
     </div>
 
     <section class="container">
