the hero image crossed over the boundaries i want, this time actually fixed it

--- a/Merch.html
+++ b/Merch.html
@@ -23,12 +23,14 @@
         </ul>
     </nav>
 
-    <div class="hero-image">
-        <div class="hero-text">
-            <h1>Blackpink Merch</h1>
-            <p>Shop the latest collection!</p>
-        </div>
+    <div class="hero-container">
+        <img src="images/heroMerch.jpg">
     </div>
+
+    <section class="hero-title">
+    <h1>Merch</h1>
+    <p>Shop the latest collection</p>
+    </section>
 
     <section class="container">
         <div class="flex-item">
