Google font and responsive detailed are added in css. Footer with blackpink's social are added for all pages, using font-awesome for the app icons. Blackpink Timeline of all their songs are added in index.html. Member information and photo are added in Aboutus.html, made them responsive so that when shown on smaller screens, it will display in order of Name, Photo and Text ect. More Items are added to Merch.html and concert ticket Purchase in Tickets.html, validation popup and alert messages are added(however, alert messages and the exit button are not working for this )

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -7,6 +7,12 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/normalize.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kedebideri:wght@400;500;600;700;800;900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -23,46 +29,80 @@
         </ul>
     </nav>
 
-    <div class="slideshow-container">
+    <h1><strong>Meet the Members!</strong></h1>
 
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 4</div>
-            <img src="images/blackpink1.jpg" style="width:100%">
-            <div class="text">Caption Text</div>
+    <section class="member">
+        <div class="member-name"><strong>Lisa</strong>
         </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 4</div>
-            <img src="images/blackpink2.jpg" style="width:100%">
-            <div class="text">Caption Two</div>
+        <div class="member-content">
+            <img src="images/Lisa.jpg" alt="Lisa" class="member-img">
+
+            <p class="member-text">
+                Lalisa Manoban was born on March 27, 1997, in Buriram, Thailand. She grew up loving dance and began training at a young age, often competing in local dance contests. Her natural talent made her stand out, and she eventually joined a dance crew that performed in major Thai events.
+                Lisa auditioned for YG Entertainment in 2010 and became the only person accepted from Thailand, impressing the judges with her rhythm, charisma, and stage confidence. She moved to Korea alone at just 14 years old, learning a new language and starting years of intense training.
+                Today, Lisa is widely considered one of the best dancers in K-pop, known for her precision, power, and expressive style. Her solo songs “LALISA” and “Money” broke international records, and she is a massive global influencer in music, fashion, and dance.
+            </p>
         </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 4</div>
-            <img src="images/blackpink3.jpg" style="width:100%">
-            <div class="text">Caption Three</div>
+        <div class="member-name"><strong>Jisoo</strong>
         </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">4 / 4</div>
-            <img src="images/blackpink3.jpg" style="width:100%">
-            <div class="text">Caption Three</div>
+        <div class="member-content">
+            <img src="images/Jisoo.jpeg" alt="Jisoo" class="member-img">
+
+            <p class="member-text">
+                Kim Jisoo was born on January 3, 1995, in Gunpo, South Korea. She grew up in a supportive family and was known from a young age for her bright personality and natural talent in performing. Before joining YG, she participated in drama club activities in school, which later helped her develop confidence on stage.
+                Jisoo became a YG trainee in 2011, one of the earliest among the members. During her trainee years, she appeared in commercials, music videos, and even acted in small roles, slowly building her presence. Her calm, composed nature made her known as the “unshakeable” member—rarely flustered and always dependable.
+                Today, Jisoo is admired for her elegant visuals, stable vocals, and growing acting career, most notably her lead role in the K-drama Snowdrop. She is also active in fashion and is recognized globally as a Dior ambassador.
+            </p>
         </div>
 
-        <a class="prev" onclick="plusSlides(-1)">❮</a>
-        <a class="next" onclick="plusSlides(1)">❯</a>
+        <div class="member-name"><strong>Jennie</strong>
+        </div>
 
-    </div>
-    <br>
+        <div class="member-content">
+            <img src="images/Jennie.jpeg" alt="Jennie" class="member-img">
 
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-    </div>
+            <p class="member-text">
+                Jennie Kim was born on January 16, 1996, in Seoul, South Korea. At age 10, she moved to New Zealand, where she attended school and became fluent in English. Living abroad helped shape her confidence, independence, and global perspective. During this time, she discovered her passion for hip-hop, R&B, and performing.
+                Jennie returned to Korea in 2010 and was soon accepted into YG Entertainment. As a trainee, she was known for her versatility—she could rap, sing, dance, and adapt to many styles. Before debuting, she featured in multiple songs with senior YG artists, earning attention for her charisma and stage presence.
+                After debuting in BLACKPINK, Jennie became known as the group’s main rapper and fashion icon, leading to her successful solo career starting with the hit “SOLO.” She remains one of the most influential celebrities in fashion globally.
+            </p>
+        </div>
+
+        <div class="member-name"><strong>Rosé</strong>
+        </div>
+
+        <div class="member-content">
+            <img src="images/Rose.jpeg" alt="Rosé" class="member-img">
+
+            <p class="member-text">
+                Roséanne Park (Korean name: Park Chaeyoung) was born on February 11, 1997, in Auckland, New Zealand, and raised in Melbourne, Australia. She grew up in a musical family and learned to sing and play instruments like guitar and piano from a young age. Her unique, airy voice became her trademark long before debut.
+                In 2012, her father encouraged her to audition for YG Entertainment, and she passed with the highest ranking among the Australian tryouts. She moved to South Korea as a teenager to train, which was a big life change but shaped her into one of BLACKPINK’s strongest performers.
+                Rosé is admired for her emotional vocals, artistic personality, and songwriting skills. Her solo album R showcased her identity as a musician and further established her as a global artist.
+            </p>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
+
+    <footer class="site-footer">
+        <h3><strong>Follow BLACKPINK</strong></h3>
+
+        <ul class="socials">
+            <li><a href="https://www.instagram.com/blackpinkofficial" target="_blank">
+                    <i class="fa-brands fa-instagram social-link"></i></a></li>
+
+            <li><a href="https://twitter.com/BLACKPINK" target="_blank">
+                    <i class="fa-brands fa-twitter social-link"></i></a></li>
+
+            <li><a href="https://www.youtube.com/BLACKPINK" target="_blank">
+                    <i class="fa-brands fa-youtube social-link"></i></a></li>
+        </ul>
+
+        <p>&copy; 2025 BLACKPINK official</p>
+    </footer>
 </body>
 
 </html>
