small footer correction

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -101,7 +101,7 @@
                     <i class="fa-brands fa-youtube social-link"></i></a></li>
         </ul>
 
-        <p>&copy; 2025 BLACKPINK official</p>
+        <p>&copy; 2025 BLACKPINK Fanpage</p>
     </footer>
 </body>
 
