--- a/Tickets.html
+++ b/Tickets.html
@@ -68,7 +68,7 @@
                         <i class="fa-brands fa-youtube social-link"></i></a></li>
             </ul>
 
-            <p>&copy; 2025 BLACKPINK official</p>
+            <p>&copy; 2025 BLACKPINK Fanpage</p>
         </footer>
 
         <div id="ticketPopup" class="popup-overlay">
